Logout button now only visible on mobile in navbar (bugfix)

--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -8,11 +8,11 @@
     max-width: 70%;
     width: 100%;
     @media (max-width: 580px) {
+        display: block;
         background: #101010;
         max-width: 100%;
         flex-direction: column;
         align-items: flex-start;
-        display: block;
     }
 
     &__logo {
@@ -49,6 +49,13 @@
         a {
             width: 100%;
             text-decoration: none;
+        }
+        &--visible {
+            display: none;
+
+            @media (max-width: 580px) {
+                display: block;
+            }
         }
         @media (max-width: 580px) {
             //background: #131313;
